# CPPNHF2

./: CMakeLists.txt  Camera.cpp  Camera.h  Circle.cpp  Circle.h  Color.cpp  Color.h  Cylinder.cpp  Cylinder.h  Desk.cpp  Desk.h  Hit.cpp  Hit.h  Lightsource.cpp  Lightsource.h  Material.cpp  Material.h  Materials.cpp  Materials.h  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Paraboloid.cpp  Paraboloid.h  README.md  Ray.cpp  Ray.h  RealCylinder.cpp  RealCylinder.h  RealParaboloid.cpp  RealParaboloid.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Settings.h  Sphere.cpp  Sphere.h  Transformation.cpp  (+5 more)
